--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -3,6 +3,7 @@ html {
 }
 
 body {
+    margin: 0px;
     @extend %font-primary;
     @include font ($size: 1.6rem, $height: 2.6rem, $weight: normal)
 }
@@ -17,9 +18,18 @@ h2 {
 }
 
 h3 {
-    @include font($size: 2.2rem, $height: 3.0rem, $weight: 600);
+    @include font($size: 2.4rem, $height: 3.4rem, $weight: 700);
+}
+
+h4{
+    @include font($size: 2.2rem, $height: 3.0rem, $weight: 600);  
 }
 
 h5 {
     @include font($size: 1.6rem, $height: 2.6rem);
+}
+
+.block-shadowed {
+    box-shadow: (0px 4px 20px rgba(0, 0, 0, 0.05));
+    border-radius: 8px;
 }
