--- a/sass/component/_contact-us.scss
+++ b/sass/component/_contact-us.scss
@@ -1,3 +1,26 @@
 .contant-us {
     background: $color-background;
+    padding: 62px 82px;
+}
+
+.contact-us__form {
+    input, textarea {
+        border: 1px solid $color-light;
+        border-radius: 5px;
+        background: $color-light;
+        padding: 10px 21px;
+        &:focus {
+            border-color: $color-brand;
+        }
+    }
+
+    textarea {
+        resize: none;
+        width: 100%;
+        height: 159px;
+    }
+}
+
+.contact-us__line {
+    margin-bottom: 19px;
 }
