add tablet and mobile view

--- a/sass/abstract/_constants.scss
+++ b/sass/abstract/_constants.scss
@@ -6,6 +6,7 @@ $color-text: #544837;
 $color-heading: #2F281E;
 $color-border: #D7D7D7;
 $color-light: #ffffff;
+$color-hamburger: #173A56;
 
 $color-violent: #7752BE;
 $color-orange: #FAB005;
