--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -6,11 +6,15 @@ body {
     margin: 0px;
     @extend %font-primary;
     @include font ($size: 1.6rem, $height: 2.6rem, $weight: normal)
+    
 }
 
 h1 {
     @extend %font-add;
     @include font($size: 4.4rem, $height: 5.4rem);
+    @include media-mobile {
+        @include font($size: 3.2rem, $height: 4.2rem);
+    }
 }
 
 h2 {
@@ -19,6 +23,9 @@ h2 {
 
 h3 {
     @include font($size: 2.4rem, $height: 3.4rem, $weight: 700);
+    @include media-mobile {
+        @include font($size: 2.1rem, $height: 3.1rem);
+    }
 }
 
 h4{
