--- a/sass/base/_logo.scss
+++ b/sass/base/_logo.scss
@@ -1,3 +1,14 @@
+.logo-object {
+    @include media-mobile {
+        width: 158px;
+    }
+}
+
+.logo_link {
+    display: flex;
+    align-items: center;
+}
+
 .logo-path {
     @extend %transition;
 }
