--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -1,12 +1,20 @@
 .footer__wrapper {
     padding: 56px 0px 72px 0px;
     display: flex;
+    @include media-tablet {
+        flex-direction: column;
+        padding: 47px 47px 26px 47px;
+    }
 }
 
 .footer-navigation {
     flex-wrap: wrap;
     flex-grow: 1;
     padding-left: 152px;
+    @include media-tablet {
+        padding-left: 0px;
+        margin-top: 34px;
+    }
 }
 
 .footer-navigation__header {
