--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -8,6 +8,17 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    @include media-tablet {
+        padding-left: 24px;
+    }
+    @include media-mobile {
+        padding-left: 21px;
+    }
+}
+
+.header__logo-line {
+    display: flex;
+    align-items: center;
 }
 
 .header__buttons {
@@ -18,4 +29,7 @@
         }
     }
 
+    @include media-mobile {
+        display: none;
+    }
 }
