--- a/sass/layouts/_wrapper.scss
+++ b/sass/layouts/_wrapper.scss
@@ -1,4 +1,12 @@
 .wrapper {
     max-width: $content-width;
     margin: auto;
+
+    @include media-laptop {
+        padding: 0px 46px;
+    }
+
+    @include media-mobile {
+        padding: 0px 21px;
+    }
 }
