implement modal window

--- a/src/sass/abstract/_constants.scss
+++ b/src/sass/abstract/_constants.scss
@@ -7,6 +7,7 @@ $color-heading: #2F281E;
 $color-border: #D7D7D7;
 $color-light: #ffffff;
 $color-hamburger: #173A56;
+$color-overlay: rgba(80, 80, 80, 0.4);
 
 $color-violent: #7752BE;
 $color-orange: #FAB005;
