--- a/src/sass/abstract/_placeholders.scss
+++ b/src/sass/abstract/_placeholders.scss
@@ -9,3 +9,18 @@
 %font-primary {
     font-family: 'Open sans', Verdana, sans-serif;
 }
+
+%custom-scroll {
+  &::-webkit-scrollbar {
+    width: 5px;
+  }
+
+  &::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 1px grey;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background: $color-violent;
+    border-radius: 10px;
+  }
+}
